My Portfolio Website

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                                 I have some experiences in Data Analyst, Data Engineer and Data Scientist fields through self-study online courses from Coursera and some projects.
                                 I become to understand the importance of data and wanted to pursue a career in Data Profession while I was working at a small family business clothing store. 
                             </p>
-                            <a href="#0" class="btn btn--medium u-fullwidth" data-animate-el>Download CV</a>
+                            <a href="images/Phone_Sett_Paing_CV.pdf" class="btn btn--medium u-fullwidth" data-animate-el>Download CV</a>
 
                         </div>
                     </div>
