--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
                                 • Apache Airflow
                                 • Apache Kafka
                                 • Shell Script
-                                • AWS Cloud
+                                • AWS
                                 • Tableau
                                 • CCNA Routing & Switching
                                 • Static web builder (Basic knowledge of Adobe Photoshop CS5, Adobe Flash CS5, Adobe 
